--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
 	"dependencies": {
 		"@supabase/ssr": "^0.5.2",
 		"@supabase/supabase-js": "^2.49.1",
+		"eslint": "^9.22.0",
 		"mode-watcher": "^0.5.1",
 		"svelte-radix": "^2.0.1"
 	}
